--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^15.1.3
   flutter_riverpod: ^2.6.1
-  dio: ^5.8.0+1
+
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  shadcn_ui: ^0.29.0
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
